--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -8,7 +8,7 @@ services:
       - ./backend/.env
     expose:
       - '3000'
-    command: pnpm run start:dev
+    command: pnpm run dev
     ports:
       - '4001:3000'
     develop:
