--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,12 +5,15 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "test": "vitest",
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.7.2",
     "next": "14.2.4",
     "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react-dom": "18.3.1",
+    "vitest": "^1.6.0"
   },
   "devDependencies": {
     "@types/node": "20.14.9",
