--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,8 @@
     "next": "14.2.4",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "vitest": "^1.6.0"
+    "vitest": "^1.6.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "20.14.9",
