--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.48.0",
     "axios": "^1.7.2",
     "next": "14.2.4",
     "react": "18.3.1",
@@ -17,6 +18,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@tanstack/eslint-plugin-query": "^5.47.0",
     "@types/node": "20.14.9",
     "@types/react": "18.3.3",
     "eslint": "8.57.0",
