--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tanstack/query-sync-storage-persister": "^5.48.0",
     "@tanstack/react-query": "^5.48.0",
+    "@tanstack/react-query-persist-client": "^5.48.0",
     "axios": "^1.7.2",
     "next": "14.2.4",
     "react": "18.3.1",
