--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,13 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.1.0",
     "@tanstack/query-sync-storage-persister": "^5.48.0",
     "@tanstack/react-query": "^5.48.0",
     "@tanstack/react-query-persist-client": "^5.48.0",
     "axios": "^1.7.2",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.397.0",
     "next": "14.2.4",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss-animate": "^1.0.7",
     "vitest": "^1.6.0",
     "zod": "^3.23.8"
   },
@@ -23,8 +29,11 @@
     "@tanstack/eslint-plugin-query": "^5.47.0",
     "@types/node": "20.14.9",
     "@types/react": "18.3.3",
+    "autoprefixer": "^10.4.19",
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.4",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.4",
     "typescript": "5.5.2"
   }
 }
