--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -1,3 +1,9 @@
 {
-  "extends": "next/core-web-vitals"
+  "extends": "next/core-web-vitals",
+  "overrides": {
+    "files": ["*.spec.ts"],
+    "rules": {
+      "jest/expect-expect": "off"
+    }
+  }
 }
