--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       - ./backend/.env
     expose:
       - '3000'
-    command: pnpm start
+    command: start:clusters
     ports:
       - '4000:3000'
     tty: true
