--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,7 +1,5 @@
 name: build-test-deploy
-on:
-  push:
-    branches: [ main ]
+on: push
 
 jobs:
   build:
@@ -16,7 +14,7 @@ jobs:
           node-version: '18.x'
           
       - name: Install backend dependencies
-        run: npm install
+        run: npm ci
         working-directory: ./backend
         
       - name: Build backend
@@ -24,7 +22,7 @@ jobs:
         working-directory: ./backend
         
       - name: Install frontend dependencies
-        run: npm install
+        run: npm ci
         working-directory: ./frontend
         
       - name: Build frontend
@@ -44,7 +42,7 @@ jobs:
           node-version: '18.x'
           
       - name: Install backend dependencies
-        run: npm install
+        run: npm ci
         working-directory: ./backend
         
       - name: Run backend tests
@@ -52,7 +50,7 @@ jobs:
         working-directory: ./backend
         
       - name: Install frontend dependencies
-        run: npm install
+        run: npm ci
         working-directory: ./frontend
         
       - name: Run frontend tests
