--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -11,7 +11,7 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '18.x'
+          node-version: '20.x'
           
       - name: Install pnpm
         run: npm install -g pnpm
@@ -52,7 +52,7 @@ jobs:
         working-directory: ./backend
         
       - name: Run backend tests
-        run: pnpm test
+        run: pnpm test run
         working-directory: ./backend
         
       - name: Install frontend dependencies
@@ -60,5 +60,5 @@ jobs:
         working-directory: ./frontend
         
       - name: Run frontend tests
-        run: pnpm test
+        run: pnpm test run
         working-directory: ./frontend
