--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -25,8 +25,8 @@
   "include": [
     "next-env.d.ts",
     "**/*.ts",
-    "**/*.tsx"
-  ],
+    "**/*.tsx",
+    "test-setup.js"  ],
   "exclude": [
     "node_modules"
   ]
